<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mushroom Sequencer</string>
    <string name="act_main">Sequencer</string>

    <string name="target_text_caption">mushroom target text</string>
    <string name="mushroom_list_caption">choose mushroom to apply</string>
    <string name="append">append</string>
    <string name="selection">range</string>

    <string name="history">history</string>
    <string name="setting">setting</string>

    <string name="notification_expand_desc">tap to open.</string>
    <string name="copy_to_clipboard">text is copied to clipboard.</string>

    <string name="notification">notification</string>
    <string name="notification_enabled_title">stay to notification area</string>
    <string name="notification_enabled_summary">if checked, this app stay to notification area. (for the IME that does not support mushroom.) </string>
    <string name="notification_whitetext_title">white text</string>
    <string name="notification_whitetext_summary">if checked, set color of notification text to white. </string>

    <string name="dash3">…</string>
    
	<string name="laziness">laziness</string>
    
    <string name="auto_finish_title">auto finish</string>
    <string name="auto_finish_summary">if checked, automatically finish when a mushroom is applied.</string>
   
    <string-array name="history_context_menu">
        <item>Input this text</item>
        <item>Copy to clipboard</item>
    </string-array>

</resources>
