<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<PreferenceCategory android:title="@string/notification">
		<CheckBoxPreference
			android:key="notification_enabled"
		    android:title="@string/notification_enabled_title"
	    	android:summary="@string/notification_enabled_summary"

	    	android:defaultValue="false"
	    	android:disableDependentsState="false"
	    />
		<CheckBoxPreference
			android:key="notification_whitetext"
		    android:title="@string/notification_whitetext_title"
	    	android:summary="@string/notification_whitetext_summary"

	    	android:defaultValue="false"
	    	android:dependency="notification_enabled"
	    />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/laziness">
		<CheckBoxPreference
			android:key="auto_finish"
		    android:title="@string/auto_finish_title"
	    	android:summary="@string/auto_finish_summary"

	    	android:defaultValue="false"
	    />
	</PreferenceCategory>
	
</PreferenceScreen>
